# ARI-thesis

./: .gitignore  README.md
ARI_display/: CMakeLists.txt  index.html  package.xml
ARI_display/__MACOSX/: ._CHANGELOG.rst  ._CMakeLists.txt  ._Dockerfile  ._demo
ARI_display/assets/css/: styles.css
ARI_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ARI_ws/src/ari_pkg/: CMakeLists.txt  package.xml
ARI_ws/src/ari_pkg/launch/: detect.launch  speech.launch
ARI_ws/src/ari_pkg/scripts/: .env  ArUco_data.py  aruco_detect.py  calibration.py  confirm_mov.py  confirm_move.py  main_process.py  move.py  points_of_interest.json  prova.py  prova_get_POI.py  publish_frames.py  responses.json  speech.py  speech_try.py  stop_robot.py  sub_process.py  talk.py  topics.json  transformations.py  wavs_maker.py
ARI_ws/src/ari_pkg/srv/: msgPOI.srv  wavs_msg.srv
Mappa_a_caso/: map.yaml
aruco_rec/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
aruco_rec/script/: det_prova.py  detect.py  pose_estimator.py
aruco_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
aruco_ws/src/detection/: CMakeLists.txt
aruco_ws/src/detection/include/detection/: camera_data.py
aruco_ws/src/detection/json/: responses.json  topics.json
aruco_ws/src/detection/launch/: detect.launch
aruco_ws/src/detection/scripts/: ArUco_data.py  aruco_detect.py  camera_data.py  download_wavs.py  fixed_tf_broadcaster.py  listener.py  matrix_base.py  move_to_POI.py  sensor.py  talking.py  tf_listener.py
aruco_ws/src/detection/src/: aruco_detect.py
display/: CHANGELOG.rst  Dockerfile  README.md
display/__MACOSX/: ._assets  (+3 more)
my_maps/: map.yaml
(+134 files in other folders)
