<?xml version="1.0"?>
<package format="2">
  <name>touch_display</name>
  <version>1.0.0</version>
  <description>A custom touch display for Ari</description>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>

  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
